@@ -1,5 +1,5 @@
 /*
- * Copyright (c) 1997, 2021, Oracle and/or its affiliates. All rights reserved.
+ * Copyright (c) 1997, 2022, Oracle and/or its affiliates. All rights reserved.
  * DO NOT ALTER OR REMOVE COPYRIGHT NOTICES OR THIS FILE HEADER.
  *
  * This code is free software; you can redistribute it and/or modify it
@@ -413,7 +413,7 @@ public class DateFormatTest extends IntlTest
     public void TestCzechMonths459()
     {
         // Use Czech, which has month names with shared prefixes for June and July
-        DateFormat fmt = DateFormat.getDateInstance(DateFormat.FULL, new Locale("cs", "", ""));
+        DateFormat fmt = DateFormat.getDateInstance(DateFormat.FULL, Locale.of("cs"));
         //((SimpleDateFormat)fmt).applyPattern("MMMM d yyyy");
         logln("Pattern " + ((SimpleDateFormat)fmt).toPattern());
 
@@ -988,7 +988,7 @@ test commented out pending API-change approval
      */
     public void TestBuddhistEraBugId4469904() {
         String era = "\u0e1e.\u0e28.";
-        Locale loc = new Locale("th", "TH");
+        Locale loc = Locale.of("th", "TH");
         Calendar cal = Calendar.getInstance(Locale.US);
         cal.set(2001, 7, 23);
         Date date = cal.getTime();
@@ -1208,7 +1208,7 @@ test commented out pending API-change approval
     }
 
     public void Test8216969() throws Exception {
-        Locale locale = new Locale("ru");
+        Locale locale = Locale.of("ru");
         String format = "\u0434\u0435\u043a";
         String standalone = "\u0434\u0435\u043a.";
 
